Adicionado para exibir unidade do item

--- a/views/produzidoOP.ejs
+++ b/views/produzidoOP.ejs
@@ -67,6 +67,7 @@ td {
                     <th>Pedido</th>
                     <th>Entrega</th>
                     <th>Qtd Entrega</th>
+                    <th>Un do Item</th>
                 </tr>
                 <tr>
                     <% entregasOP.forEach(function(entrega) { 
@@ -74,6 +75,7 @@ td {
                         <td class= "td-cor"><%=entrega.PEDIDO%></td>
                         <td class= "td-cor"><%=entrega.SEQ_ENTREGA%></td>
                         <td class= "td-cor"><%=entrega.QUANTIDADE%></td>
+                        <td class= "td-cor"><%=entrega.UNIDADE%></td>
                         <tr></tr>
                     <% }); %>
                 </tr>
