--- a/views/produzidoOP.ejs
+++ b/views/produzidoOP.ejs
@@ -68,6 +68,7 @@ td {
                     <th>Entrega</th>
                     <th>Qtd Entrega</th>
                     <th>Un do Item</th>
+                    <th>Taras Utilizadas</th>
                 </tr>
                 <tr>
                     <% entregasOP.forEach(function(entrega) { 
@@ -76,10 +77,25 @@ td {
                         <td class= "td-cor"><%=entrega.SEQ_ENTREGA%></td>
                         <td class= "td-cor"><%=entrega.QUANTIDADE%></td>
                         <td class= "td-cor"><%=entrega.UNIDADE%></td>
+                        <td class= "td-cor"><%=tarasOP[0].TARAS%></td>
                         <tr></tr>
                     <% }); %>
                 </tr>
             </table>
+
+            <table style="width:100%">
+                <tr>
+                    <th>Taras Utilizadas</th>
+                </tr>
+                <tr>
+                    <% tarasOP.forEach(function(tara) { 
+                        %>
+                        <td class= "td-cor"><%=tara.TARAS%></td>
+                        <tr></tr>
+                    <% }); %>
+                </tr>
+            </table>
+
             <p> 
                 Produções da OP - CIM
             </p> 
