--- a/views/errorPage.ejs
+++ b/views/errorPage.ejs
@@ -31,5 +31,10 @@
             <%=msg%>
         </div>
     </div> 
+<script>
+    setInterval(() => {
+        window.location.reload(true); // força reload total a cada minuto
+        }, 60000); // 60.000 ms = 1 minuto
+</script>
 </body>
 </html>
